popup component and fixed layout on mobile devices

--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -10,6 +10,7 @@
 .navbar {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     padding: 0.5rem 2rem; 
     border-bottom: #bbbbbb solid 1px;
