--- a/frontend/src/components/writercomponent/WriterComponent.css
+++ b/frontend/src/components/writercomponent/WriterComponent.css
@@ -1,13 +1,26 @@
 
-.layout-writer {
+
+@media(max-width: 500px){
+    .layout-writer{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .add-content-type{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
+@media(min-width: 500px){
+    .layout-writer {
     display: grid;
-    max-width: 70%;
-    min-height: max-content;
-    
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+    width: 70%;
     margin: auto;
     
+}
 }
 
 .write-content {
@@ -22,12 +35,14 @@
     
     
     
+    
 }
 
 .add-content-type {
     display: flex;
-    flex-direction: row;
-
+    flex-direction:row;
+    gap: 10px;
+    justify-content: space-between;
     background-color: #d6d6d6;
     border-radius: 0px 5px 5px 0px;
     border-right: 1px dashed rgb(134, 134, 134);
@@ -65,6 +80,7 @@
 
 
 .button-add-content{
+   
     border:none;
     border-radius: 4px;
     margin: 5px;
@@ -73,7 +89,6 @@
     font-weight: 1000;
     border: solid rgb(124, 124, 124) 2px;
     color:#40311E;
-    
 }
 
 .button-add-content:hover{
